WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304057
[threaded-animations] WPT test `css/css-backgrounds/animations/background-color-animation-single-keyframe.html` crashes with "Threaded Time-based Animations" enabled
https://bugs.webkit.org/show_bug.cgi?id=304057
Summary
[threaded-animations] WPT test `css/css-backgrounds/animations/background-col...
Antoine Quint
Reported
2025-12-12 03:36:47 PST
The assertion added in
304301@main
causes a crash with debug builds for this test.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-12 03:36:55 PST
<
rdar://problem/166375768
>
Antoine Quint
Comment 2
2025-12-12 03:38:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55305
EWS
Comment 3
2025-12-12 07:00:34 PST
Committed
304356@main
(3066a2b30697): <
https://commits.webkit.org/304356@main
> Reviewed commits have been landed. Closing PR #55305 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug