[threaded-animations] WPT test `css/css-backgrounds/animations/background-color-animation-single-keyframe.html` crashes with "Threaded Time-based Animations" enabled https://bugs.webkit.org/show_bug.cgi?id=304057 rdar://166375768

Reviewed by Anne van Kesteren.

The assertion we added in 304301@main does not always hold, so add a null check instead.

* Source/WebCore/animation/AcceleratedEffectStackUpdater.cpp:
(WebCore::AcceleratedEffectStackUpdater::update):

Canonical link: https://commits.webkit.org/304356@main